objects/PartnerPerformance__c.object
<CustomObject>
    <description>Business process require a validation process that kicks off when the user tries to submit a performance scorecard.</description>
    <fields>
        <fullName>Brand_Guidelines__c</fullName>
        <inlineHelpText>No violations.</inlineHelpText>
        <label>Brand Guidelines - 5 pts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Complaints__c</fullName>
        <label>Customer Complaints</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Survey_Rating__c</fullName>
        <label>Customer Survey Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Design_Training_Score__c</fullName>
        <inlineHelpText>All designers/engineers at Associate level within 6 months of hire date and Advanced within 12 months.</inlineHelpText>
        <label>Design Training - 5 pts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRS_App_Eng_Score_5_pts__c</fullName>
        <formula>Warranty_Card_Return_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HRS App Eng - 5 pts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRS_Customer_Service_Score_10_pts__c</fullName>
        <formula>Opportunity_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HRS Customer Service - 10 pts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRS_Customer_Service_Score__c</fullName>
        <defaultValue>Opportunity_Contact__c</defaultValue>
        <label>HRS Customer Service</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRS_Marketing_Score_50_pts__c</fullName>
        <formula>Brand_Guidelines__c  +  Logo_Gear__c  +  Marketing_Material__c  +  MDTF_Funds_Used__c  +  Office_Display__c  +  Vehicle_Signage__c  +  Website_Logo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HRS Marketing - 50 pts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRS_Marketing_Score__c</fullName>
        <defaultValue>Website_Logo__c + Marketing_Material__c + Logo_Gear__c + Office_Display__c + Vehicle_Signage__c + Brand_Guidelines__c + MDTF_Funds_Used__c</defaultValue>
        <label>HRS Marketing</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRS_Outcome__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HRS Outcome</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRS_Sales_Score_10_pts__c</fullName>
        <formula>On_Time_Sales_Forecast_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HRS Sales - 10 pts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRS_Sales_Score__c</fullName>
        <defaultValue>On_Time_Sales_Forecast_Score__c</defaultValue>
        <label>HRS Sales</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRS_Total__c</fullName>
        <formula>HRS_App_Eng_Score_5_pts__c  +  HRS_Customer_Service_Score_10_pts__c  +  HRS_Marketing_Score_50_pts__c  +  HRS_Sales_Score_10_pts__c  +  HRS_Training_Score_25_pts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HRS Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRS_Training_Score_25_pts__c</fullName>
        <formula>Design_Training_Score__c  +  Install_Training_Score__c  +  Sales_Training_Score__c  +  Home_Inspection_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HRS Training - 25 pts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRS_Training_Score__c</fullName>
        <defaultValue>Design_Training_Score__c + Install_Training_Score__c  + Sales_Training_Score__c</defaultValue>
        <label>HRS Training</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Home_Inspection_Score__c</fullName>
        <inlineHelpText>Pass 2 inspections in a row on first try.</inlineHelpText>
        <label>Home Inspection - 10 pts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Install_Training_Score__c</fullName>
        <inlineHelpText>All installers at Associate level within 6 months of hire date and Advanced within 12 months.</inlineHelpText>
        <label>Install Training - 5 pts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Logo_Gear__c</fullName>
        <inlineHelpText>Ordered $2 worth of logo gear from Smart Store for every kW of sales.</inlineHelpText>
        <label>Logo Gear - 10 pts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDTF_Funds_Used__c</fullName>
        <inlineHelpText>90% of MDTF funds used before expiration.</inlineHelpText>
        <label>MDTF Funds Used - 5 pts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Material__c</fullName>
        <inlineHelpText>One brochure ordered for each kW of sales.</inlineHelpText>
        <label>Marketing Material - 10 pts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Display__c</fullName>
        <inlineHelpText>Office display in showroom; Premier Dealer logo in front of building.</inlineHelpText>
        <label>Office Display - 5 pts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Time_Sales_Forecast_Score__c</fullName>
        <inlineHelpText>Complete and by due date.</inlineHelpText>
        <label>On Time Sales Forecast - 10 pts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Contact__c</fullName>
        <inlineHelpText>Contacted within an average of 2 business days.</inlineHelpText>
        <label>Opportunity Contact - 10 pts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>PartnerPerformances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales_Training_Score__c</fullName>
        <inlineHelpText>All sales people at Associate level within 9 months of hire date.</inlineHelpText>
        <label>Sales Training - 5 pts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT( Submit_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_Status__c</fullName>
        <label>Submit Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Validation_Status__c</fullName>
        <label>Validation Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vehicle_Signage__c</fullName>
        <inlineHelpText>100% of company vehicles using Premier Dealer logo.</inlineHelpText>
        <label>Vehicle Signage - 5 pts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warranty_Card_Return_Rate__c</fullName>
        <label>Warranty Card Return Rate</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Warranty_Card_Return_Score__c</fullName>
        <inlineHelpText>1 warranty card received for every 10 kW of PV shipped.</inlineHelpText>
        <label>Warranty Card Return - 5 pts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Website_Logo__c</fullName>
        <inlineHelpText>Premier Dealer logo on dealer homepage and all primary pages.</inlineHelpText>
        <label>Website Logo - 10 pts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>HRS Partner Performance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PP-{0000}</displayFormat>
        <label>Partner Performance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HRS Partner Performances</pluralLabel>
    <recordTypes>
        <fullName>New_Partner_Performance</fullName>
        <active>true</active>
        <label>New Partner Performance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Submitted_Partner_Performance</fullName>
        <active>true</active>
        <label>Submitted Partner Performance</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Brand_Guidelines</fullName>
        <active>true</active>
        <description>between 0 and 5</description>
        <errorConditionFormula>NOT( ISNULL(Brand_Guidelines__c))  &amp;&amp;  IF(Brand_Guidelines__c &lt; 0 || Brand_Guidelines__c &gt; 5, true, false)</errorConditionFormula>
        <errorMessage>Please enter Brand Guidelines 0 to 5</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Design_Training_Score</fullName>
        <active>true</active>
        <description>between 0 and 5</description>
        <errorConditionFormula>NOT( ISNULL(Design_Training_Score__c)) &amp;&amp; IF(Design_Training_Score__c &lt; 0 || Design_Training_Score__c &gt; 5, true, false)</errorConditionFormula>
        <errorMessage>Please enter Design Training Score 0 to 5</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Home_Inspection_Score</fullName>
        <active>true</active>
        <description>between 0 and 10</description>
        <errorConditionFormula>NOT( ISNULL( Home_Inspection_Score__c )) &amp;&amp; IF(Home_Inspection_Score__c  &lt; 0 || Home_Inspection_Score__c  &gt; 10, true, false)</errorConditionFormula>
        <errorMessage>Please enter Home Inspection Score 0 to 10</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Install_Training_Score</fullName>
        <active>true</active>
        <description>between 0 and 5</description>
        <errorConditionFormula>NOT( ISNULL( Install_Training_Score__c )) &amp;&amp; IF(Install_Training_Score__c &lt; 0 || Install_Training_Score__c&gt; 5, true, false)</errorConditionFormula>
        <errorMessage>Please enter Install Training Score 0 to 5</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Logo_Gear</fullName>
        <active>true</active>
        <description>value must be between 0 and 10</description>
        <errorConditionFormula>NOT( ISNULL( Logo_Gear__c)) &amp;&amp; IF(Logo_Gear__c &lt; 0 || Logo_Gear__c &gt; 10, true, false)</errorConditionFormula>
        <errorMessage>Please enter Logo Gear 0 to 10</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MDTF_Funds_Used</fullName>
        <active>true</active>
        <description>Value must be between 0 and 5</description>
        <errorConditionFormula>NOT( ISNULL(MDTF_Funds_Used__c)) &amp;&amp; IF(MDTF_Funds_Used__c &lt; 0 || MDTF_Funds_Used__c &gt; 5, true, false)</errorConditionFormula>
        <errorMessage>Please enter MDTF Funds Used 0 to 5</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Marketing_Material</fullName>
        <active>true</active>
        <description>Value must be between 0 and 10</description>
        <errorConditionFormula>NOT( ISNULL(Marketing_Material__c)) &amp;&amp; IF(Marketing_Material__c &lt; 0 || Marketing_Material__c  &gt; 10, true, false)</errorConditionFormula>
        <errorMessage>Please enter Marketing Material 0 to 10.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Office_Display</fullName>
        <active>true</active>
        <description>between 0 and 5</description>
        <errorConditionFormula>NOT( ISNULL(Office_Display__c)) &amp;&amp; IF(Office_Display__c &lt; 0 || Office_Display__c &gt; 5, true, false)</errorConditionFormula>
        <errorMessage>Please enter Office Display 0 to 5.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>On_Time_Sales_Forecast_Score</fullName>
        <active>true</active>
        <description>between 0 and 10</description>
        <errorConditionFormula>NOT( ISNULL( On_Time_Sales_Forecast_Score__c )) &amp;&amp; IF(On_Time_Sales_Forecast_Score__c  &lt; 0 || On_Time_Sales_Forecast_Score__c  &gt; 10, true, false)</errorConditionFormula>
        <errorMessage>Please enter On Time Sales Forecast Score 0 to 10</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Contact</fullName>
        <active>true</active>
        <description>between 0 and 10</description>
        <errorConditionFormula>NOT( ISNULL( Opportunity_Contact__c)) &amp;&amp; IF(Opportunity_Contact__c &lt; 0 || Opportunity_Contact__c &gt; 10, true, false)</errorConditionFormula>
        <errorMessage>Please enter Opportunity Contact 0 to 10</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Training_Score</fullName>
        <active>true</active>
        <description>between 0 and 5</description>
        <errorConditionFormula>NOT( ISNULL( Sales_Training_Score__c )) &amp;&amp; IF(Sales_Training_Score__c  &lt; 0 || Sales_Training_Score__c  &gt; 5, true, false)</errorConditionFormula>
        <errorMessage>Please enter Vehicle Signage 0 to 5.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Vehicle_Signage</fullName>
        <active>true</active>
        <description>between 0 and 5</description>
        <errorConditionFormula>NOT( ISNULL( Vehicle_Signage__c )) &amp;&amp; IF(Vehicle_Signage__c  &lt; 0 || Vehicle_Signage__c &gt; 5, true, false)</errorConditionFormula>
        <errorMessage>Please enter Vehicle Signage 0 to 5.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Warranty_Card_Return_Score</fullName>
        <active>true</active>
        <description>between 0 and 5</description>
        <errorConditionFormula>NOT( ISNULL( Warranty_Card_Return_Score__c)) &amp;&amp; IF(Warranty_Card_Return_Score__c &lt; 0 || Warranty_Card_Return_Score__c &gt; 5, true, false)</errorConditionFormula>
        <errorMessage>Please enter Warranty Card Return Score 0 to 5</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Website_Logo</fullName>
        <active>true</active>
        <description>between 0 and 10</description>
        <errorConditionFormula>NOT( ISNULL( Website_Logo__c)) &amp;&amp; IF( Website_Logo__c&lt; 0 || Website_Logo__c &gt; 10, true, false)</errorConditionFormula>
        <errorMessage>Please enter Website Logo 0 to 10.</errorMessage>
    </validationRules>
</CustomObject>